--- a/app/src/main/res/layout/counter.xml
+++ b/app/src/main/res/layout/counter.xml
@@ -19,19 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:background="#313131">
+            android:backgroundTint="#313131">
+            
 
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:contentDescription="@string/del_counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_delete" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
