--- a/app/src/main/res/layout/counter.xml
+++ b/app/src/main/res/layout/counter.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/counter_main"
     android:layout_height="wrap_content">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/close_counter"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -17,6 +18,7 @@
         app:cardCornerRadius="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
         tools:src="@drawable/ic_close" />
 
     <androidx.cardview.widget.CardView
@@ -57,19 +59,57 @@
                 android:id="@+id/counter_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="25dp"
                 android:text="@string/counter_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#EEEEEE"
                 android:textIsSelectable="false"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                tools:text="@string/counter_" />
+
+            <ImageView
+                android:id="@+id/remove_counter"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="105dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/remove_counter"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/counter_name"
+                tools:src="@drawable/ic_remove" />
+
+            <ImageView
+                android:id="@+id/add_counter"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="105dp"
+                android:contentDescription="@string/add_counter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/counter_name"
+                tools:src="@drawable/ic_add" />
+
+            <TextView
+                android:id="@+id/count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/_1"
+                android:textColor="#FFD600"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:tooltipText="@string/_1"
+                app:layout_constraintEnd_toStartOf="@+id/add_counter"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/remove_counter"
+                app:layout_constraintTop_toBottomOf="@+id/counter_name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
